testing/Travis/testcases/TypeChecker/shouldFail/DiamondTypeMismatch.adl
CONTEXT DiamondTypeMismatchCheck IN ENGLISH

PURPOSE CONTEXT DiamondTypeMismatchCheck
{+ Test that diamond operator fails when concepts cannot be matched.
   This verifies the type checker correctly rejects r[A*B]<>r~[B*A] due to type mismatch. +}

RELATION r[A*B]
RELATION result[A*C]

RULE testDiamondFail: result = r<>r~

ENDCONTEXT
